# Home-Energy-Analysis

./: .gitignore  6th Jan Notes.rtf  AGENTS.md  Amber_API_Documentation.rtf  LICENSE  PROJECT_PROGRESS.md  ProjectPlan.md  Project_Plan.rtf  README.md  TODO.md  historical_data.csv  prices_data.csv  prices_data_cleaned.csv  pyproject.toml  requirements.txt  usage_data.csv  usage_data_cleaned.csv
docs/: STATUS_REPORT.md  decisions_log.md  pi_deployment.md  roadmap.md
ingestion/: amber_client.py
pi/: update.sh
scripts/: backfill_amber_prices_to_supabase.py  backfill_amber_usage_to_supabase.py  compare_usage_sources.py  export_simulation_pptx_with_keynote.py  find_earliest_usage.py  forward_sync_supabase.py  generate_flow_mockup_pngs.py  generate_simulation_presentation_assets.py  generate_simulation_presentation_pngs.py  load_parquet_to_supabase.py  load_powerpal_minute_to_supabase.py  modelling_preflight.py  pull_historical.py  pull_powerpal.py  pull_powerpal_minute_csv.py  refresh_powerpal_to_supabase.py  run_annual_analysis.py  run_scenario_simulation.py  run_simulation_live.py  supabase_keepalive.py  sync_cache.py  sync_sqlite_to_supabase.py  test_supabase_db.py  verify_setup.py
storage/: __init__.py
tests/: test_amber_usage_backfill.py  test_analysis_endpoint.py  test_annual_analysis.py  test_compare_usage_sources.py  test_forecast_endpoint.py  test_health_endpoint.py  test_powerpal_download.py  test_powerpal_loader.py  test_price_endpoint.py  test_scenario_engine.py  test_simulation_endpoint.py  test_sqlite_cache.py  test_sqlite_to_supabase_sync.py  (+1 more)
(+46 files in other folders)
